applications/integration/networking/access/tcp/postgres/postgres-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: postgres-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      name: tcp
      number: 206
      protocol: TCP
    hosts:
    - '*'
